# meal_strickers

./: main.py  pricelist.xlsx  pyproject.toml  reader.py  tools.py  ui.py
